--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
     "typescript": "^3.2.1"
   },
   "dependencies": {
+    "apollo-server-express": "^2.4.0",
     "express": "^4.16.4",
+    "graphql": "^14.1.1",
+    "graphql-tools": "^4.0.4",
     "mongodb": "^3.1.13",
-    "neo4j-driver": "^1.7.2"
+    "neo4j-driver": "^1.7.2",
+    "neo4j-graphql-js": "^2.3.1"
   }
 }
