--- a/package.json
+++ b/package.json
@@ -16,18 +16,19 @@
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.16.0",
-    "@types/mongodb": "^3.1.19",
-    "@types/node": "^10.12.11",
+    "@types/graphql": "^14.2.0",
+    "@types/mongodb": "^3.1.25",
+    "@types/node": "^11.13.8",
     "del-cli": "^1.1.0",
-    "typescript": "^3.2.1"
+    "typescript": "^3.4.5"
   },
   "dependencies": {
-    "apollo-server-express": "^2.4.0",
+    "apollo-server-express": "^2.4.8",
     "express": "^4.16.4",
-    "graphql": "^14.1.1",
+    "graphql": "^14.2.1",
     "graphql-tools": "^4.0.4",
-    "mongodb": "^3.1.13",
-    "neo4j-driver": "^1.7.2",
-    "neo4j-graphql-js": "^2.3.1"
+    "mongodb": "^3.2.3",
+    "neo4j-driver": "^1.7.3",
+    "neo4j-graphql-js": "^2.6.0"
   }
 }
